--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,9 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    def work_version = "2.8.0-alpha04"
+//    def work_version = "2.8.0-alpha04"
 //    def work_version = "2.3.4"
+    def work_version = "2.8.0-SNAPSHOT"
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "androidx.work:work-rxjava2:$work_version"
 
