--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://androidx.dev/snapshots/builds/9099139/artifacts/repository' }
     }
 }
-rootProject.name = "WorkManagerOOM"
+rootProject.name = "work-manager-oom"
 include ':app'
